promql/parser/y.output

state 0
	$accept: .start $end 

	error  shift 6
	START_METRIC  shift 2
	START_SERIES_DESCRIPTION  shift 3
	START_EXPRESSION  shift 4
	START_METRIC_SELECTOR  shift 5
	.  error

	start  goto 1

state 1
	$accept:  start.$end 
	start:  start.EOF 

	$end  accept
	EOF  shift 7
	.  error


state 2
	start:  START_METRIC.metric 
	label_set: .    (115)

	IDENTIFIER  shift 17
	LEFT_BRACE  shift 31
	METRIC_IDENTIFIER  shift 22
	LAND  shift 18
	LOR  shift 19
	LUNLESS  shift 20
	AVG  shift 11
	BOTTOMK  shift 12
	COUNT  shift 14
	COUNT_VALUES  shift 15
	GROUP  shift 16
	MAX  shift 21
	MIN  shift 23
	QUANTILE  shift 25
	STDDEV  shift 26
	STDVAR  shift 27
	SUM  shift 28
	TOPK  shift 29
	BY  shift 13
	OFFSET  shift 24
	WITHOUT  shift 30
	.  reduce 115 (src line 563)

	metric_identifier  goto 9
	label_set  goto 10
	metric  goto 8

state 3
	start:  START_SERIES_DESCRIPTION.series_description 
	label_set: .    (115)

	IDENTIFIER  shift 17
	LEFT_BRACE  shift 31
	METRIC_IDENTIFIER  shift 22
	LAND  shift 18
	LOR  shift 19
	LUNLESS  shift 20
	AVG  shift 11
	BOTTOMK  shift 12
	COUNT  shift 14
	COUNT_VALUES  shift 15
	GROUP  shift 16
	MAX  shift 21
	MIN  shift 23
	QUANTILE  shift 25
	STDDEV  shift 26
	STDVAR  shift 27
	SUM  shift 28
	TOPK  shift 29
	BY  shift 13
	OFFSET  shift 24
	WITHOUT  shift 30
	.  reduce 115 (src line 563)

	metric_identifier  goto 9
	label_set  goto 10
	metric  goto 33
	series_description  goto 32

state 4
	start:  START_EXPRESSION.EOF 
	start:  START_EXPRESSION.expr 

	EOF  shift 34
	IDENTIFIER  shift 49
	LEFT_BRACE  shift 70
	LEFT_PAREN  shift 51
	METRIC_IDENTIFIER  shift 22
	NUMBER  shift 50
	STRING  shift 52
	ADD  shift 68
	LAND  shift 18
	LOR  shift 19
	LUNLESS  shift 20
	SUB  shift 69
	AVG  shift 56
	BOTTOMK  shift 57
	COUNT  shift 58
	COUNT_VALUES  shift 59
	GROUP  shift 60
	MAX  shift 61
	MIN  shift 62
	QUANTILE  shift 63
	STDDEV  shift 64
	STDVAR  shift 65
	SUM  shift 66
	TOPK  shift 67
	BY  shift 13
	OFFSET  shift 24
	WITHOUT  shift 30
	.  error

	aggregate_op  goto 48
	metric_identifier  goto 54
	unary_op  goto 53
	step_invariant_expr  goto 47
	aggregate_expr  goto 36
	binary_expr  goto 37
	expr  goto 35
	function_call  goto 38
	label_matchers  goto 55
	matrix_selector  goto 39
	number_literal  goto 40
	offset_expr  goto 41
	paren_expr  goto 42
	string_literal  goto 43
	subquery_expr  goto 44
	unary_expr  goto 45
	vector_selector  goto 46

state 5
	start:  START_METRIC_SELECTOR.vector_selector 

	IDENTIFIER  shift 17
	LEFT_BRACE  shift 70
	METRIC_IDENTIFIER  shift 22
	LAND  shift 18
	LOR  shift 19
	LUNLESS  shift 20
	AVG  shift 11
	BOTTOMK  shift 12
	COUNT  shift 14
	COUNT_VALUES  shift 15
	GROUP  shift 16
	MAX  shift 21
	MIN  shift 23
	QUANTILE  shift 25
	STDDEV  shift 26
	STDVAR  shift 27
	SUM  shift 28
	TOPK  shift 29
	BY  shift 13
	OFFSET  shift 24
	WITHOUT  shift 30
	.  error

	metric_identifier  goto 54
	label_matchers  goto 55
	vector_selector  goto 71

state 6
	start:  error.    (7)

	.  reduce 7 (src line 175)


state 7
	start:  start EOF.    (6)

	.  reduce 6 (src line 174)


state 8
	start:  START_METRIC metric.    (1)

	.  reduce 1 (src line 164)


state 9
	metric:  metric_identifier.label_set 
	label_set: .    (115)

	LEFT_BRACE  shift 31
	.  reduce 115 (src line 563)

	label_set  goto 72

state 10
	metric:  label_set.    (91)

	.  reduce 91 (src line 550)


state 11
	metric_identifier:  AVG.    (92)

	.  reduce 92 (src line 555)


state 12
	metric_identifier:  BOTTOMK.    (93)

	.  reduce 93 (src line 555)


state 13
	metric_identifier:  BY.    (94)

	.  reduce 94 (src line 555)


state 14
	metric_identifier:  COUNT.    (95)

	.  reduce 95 (src line 555)


state 15
	metric_identifier:  COUNT_VALUES.    (96)

	.  reduce 96 (src line 555)


state 16
	metric_identifier:  GROUP.    (97)

	.  reduce 97 (src line 555)


state 17
	metric_identifier:  IDENTIFIER.    (98)

	.  reduce 98 (src line 555)


state 18
	metric_identifier:  LAND.    (99)

	.  reduce 99 (src line 555)


state 19
	metric_identifier:  LOR.    (100)

	.  reduce 100 (src line 555)


state 20
	metric_identifier:  LUNLESS.    (101)

	.  reduce 101 (src line 555)


state 21
	metric_identifier:  MAX.    (102)

	.  reduce 102 (src line 555)


state 22
	metric_identifier:  METRIC_IDENTIFIER.    (103)

	.  reduce 103 (src line 555)


state 23
	metric_identifier:  MIN.    (104)

	.  reduce 104 (src line 555)


state 24
	metric_identifier:  OFFSET.    (105)

	.  reduce 105 (src line 555)


state 25
	metric_identifier:  QUANTILE.    (106)

	.  reduce 106 (src line 555)


state 26
	metric_identifier:  STDDEV.    (107)

	.  reduce 107 (src line 555)


state 27
	metric_identifier:  STDVAR.    (108)

	.  reduce 108 (src line 555)


state 28
	metric_identifier:  SUM.    (109)

	.  reduce 109 (src line 555)


state 29
	metric_identifier:  TOPK.    (110)

	.  reduce 110 (src line 555)


state 30
	metric_identifier:  WITHOUT.    (111)

	.  reduce 111 (src line 555)


state 31
	label_set:  LEFT_BRACE.label_set_list RIGHT_BRACE 
	label_set:  LEFT_BRACE.label_set_list COMMA RIGHT_BRACE 
	label_set:  LEFT_BRACE.RIGHT_BRACE 

	error  shift 77
	IDENTIFIER  shift 76
	RIGHT_BRACE  shift 74
	.  error

	label_set_list  goto 73
	label_set_item  goto 75

state 32
	start:  START_SERIES_DESCRIPTION series_description.    (2)

	.  reduce 2 (src line 167)


state 33
	series_description:  metric.series_values 
	series_values: .    (124)

	$end  reduce 124 (src line 599)
	error  shift 79
	EOF  reduce 124 (src line 599)
	SPACE  reduce 124 (src line 599)
	.  error

	series_values  goto 78

state 34
	start:  START_EXPRESSION EOF.    (3)

	.  reduce 3 (src line 168)


state 35
	start:  START_EXPRESSION expr.    (4)
	binary_expr:  expr.ADD bin_modifier expr 
	binary_expr:  expr.DIV bin_modifier expr 
	binary_expr:  expr.EQLC bin_modifier expr 
	binary_expr:  expr.GTE bin_modifier expr 
	binary_expr:  expr.GTR bin_modifier expr 
	binary_expr:  expr.LAND bin_modifier expr 
	binary_expr:  expr.LOR bin_modifier expr 
	binary_expr:  expr.LSS bin_modifier expr 
	binary_expr:  expr.LTE bin_modifier expr 
	binary_expr:  expr.LUNLESS bin_modifier expr 
	binary_expr:  expr.MOD bin_modifier expr 
	binary_expr:  expr.MUL bin_modifier expr 
	binary_expr:  expr.NEQ bin_modifier expr 
	binary_expr:  expr.POW bin_modifier expr 
	binary_expr:  expr.SUB bin_modifier expr 
	offset_expr:  expr.OFFSET duration 
	offset_expr:  expr.OFFSET error 
	step_invariant_expr:  expr.AT number 
	step_invariant_expr:  expr.AT error 
	matrix_selector:  expr.LEFT_BRACKET duration RIGHT_BRACKET 
	subquery_expr:  expr.LEFT_BRACKET duration COLON maybe_duration RIGHT_BRACKET 
	subquery_expr:  expr.LEFT_BRACKET duration COLON duration error 
	subquery_expr:  expr.LEFT_BRACKET duration COLON error 
	subquery_expr:  expr.LEFT_BRACKET duration error 
	subquery_expr:  expr.LEFT_BRACKET error 

	LEFT_BRACKET  shift 97
	ADD  shift 80
	DIV  shift 81
	EQLC  shift 82
	GTE  shift 83
	GTR  shift 84
	LAND  shift 85
	LOR  shift 86
	LSS  shift 87
	LTE  shift 88
	LUNLESS  shift 89
	MOD  shift 90
	MUL  shift 91
	NEQ  shift 92
	POW  shift 93
	SUB  shift 94
	AT  shift 96
	OFFSET  shift 95
	.  reduce 4 (src line 170)


state 36
	expr:  aggregate_expr.    (8)

	.  reduce 8 (src line 179)


state 37
	expr:  binary_expr.    (9)

	.  reduce 9 (src line 181)


state 38
	expr:  function_call.    (10)

	.  reduce 10 (src line 182)


state 39
	expr:  matrix_selector.    (11)

	.  reduce 11 (src line 183)


state 40
	expr:  number_literal.    (12)

	.  reduce 12 (src line 184)


state 41
	expr:  offset_expr.    (13)

	.  reduce 13 (src line 185)


state 42
	expr:  paren_expr.    (14)

	.  reduce 14 (src line 186)


state 43
	expr:  string_literal.    (15)

	.  reduce 15 (src line 187)


state 44
	expr:  subquery_expr.    (16)

	.  reduce 16 (src line 188)


state 45
	expr:  unary_expr.    (17)

	.  reduce 17 (src line 189)


state 46
	expr:  vector_selector.    (18)

	.  reduce 18 (src line 190)


state 47
	expr:  step_invariant_expr.    (19)

	.  reduce 19 (src line 191)


state 48
	aggregate_expr:  aggregate_op.aggregate_modifier function_call_body 
	aggregate_expr:  aggregate_op.function_call_body aggregate_modifier 
	aggregate_expr:  aggregate_op.function_call_body 
	aggregate_expr:  aggregate_op.error 

	error  shift 100
	LEFT_PAREN  shift 103
	BY  shift 101
	WITHOUT  shift 102
	.  error

	aggregate_modifier  goto 98
	function_call_body  goto 99

state 49
	function_call:  IDENTIFIER.function_call_body 
	metric_identifier:  IDENTIFIER.    (98)

	LEFT_PAREN  shift 103
	.  reduce 98 (src line 555)

	function_call_body  goto 104

state 50
	number_literal:  NUMBER.    (178)

	.  reduce 178 (src line 668)


state 51
	paren_expr:  LEFT_PAREN.expr RIGHT_PAREN 

	IDENTIFIER  shift 49
	LEFT_BRACE  shift 70
	LEFT_PAREN  shift 51
	METRIC_IDENTIFIER  shift 22
	NUMBER  shift 50
	STRING  shift 52
	ADD  shift 68
	LAND  shift 18
	LOR  shift 19
	LUNLESS  shift 20
	SUB  shift 69
	AVG  shift 56
	BOTTOMK  shift 57
	COUNT  shift 58
	COUNT_VALUES  shift 59
	GROUP  shift 60
	MAX  shift 61
	MIN  shift 62
	QUANTILE  shift 63
	STDDEV  shift 64
	STDVAR  shift 65
	SUM  shift 66
	TOPK  shift 67
	BY  shift 13
	OFFSET  shift 24
	WITHOUT  shift 30
	.  error

	aggregate_op  goto 48
	metric_identifier  goto 54
	unary_op  goto 53
	step_invariant_expr  goto 47
	aggregate_expr  goto 36
	binary_expr  goto 37
	expr  goto 105
	function_call  goto 38
	label_matchers  goto 55
	matrix_selector  goto 39
	number_literal  goto 40
	offset_expr  goto 41
	paren_expr  goto 42
	string_literal  goto 43
	subquery_expr  goto 44
	unary_expr  goto 45
	vector_selector  goto 46

state 52
	string_literal:  STRING.    (184)

	.  reduce 184 (src line 704)


state 53
	unary_expr:  unary_op.expr 

	IDENTIFIER  shift 49
	LEFT_BRACE  shift 70
	LEFT_PAREN  shift 51
	METRIC_IDENTIFIER  shift 22
	NUMBER  shift 50
	STRING  shift 52
	ADD  shift 68
	LAND  shift 18
	LOR  shift 19
	LUNLESS  shift 20
	SUB  shift 69
	AVG  shift 56
	BOTTOMK  shift 57
	COUNT  shift 58
	COUNT_VALUES  shift 59
	GROUP  shift 60
	MAX  shift 61
	MIN  shift 62
	QUANTILE  shift 63
	STDDEV  shift 64
	STDVAR  shift 65
	SUM  shift 66
	TOPK  shift 67
	BY  shift 13
	OFFSET  shift 24
	WITHOUT  shift 30
	.  error

	aggregate_op  goto 48
	metric_identifier  goto 54
	unary_op  goto 53
	step_invariant_expr  goto 47
	aggregate_expr  goto 36
	binary_expr  goto 37
	expr  goto 106
	function_call  goto 38
	label_matchers  goto 55
	matrix_selector  goto 39
	number_literal  goto 40
	offset_expr  goto 41
	paren_expr  goto 42
	string_literal  goto 43
	subquery_expr  goto 44
	unary_expr  goto 45
	vector_selector  goto 46

state 54
	vector_selector:  metric_identifier.label_matchers 
	vector_selector:  metric_identifier.    (78)

	LEFT_BRACE  shift 70
	.  reduce 78 (src line 479)

	label_matchers  goto 107

state 55
	vector_selector:  label_matchers.    (79)

	.  reduce 79 (src line 489)


state 56
	metric_identifier:  AVG.    (92)
	aggregate_op:  AVG.    (136)

	error  reduce 136 (src line 655)
	LEFT_PAREN  reduce 136 (src line 655)
	BY  reduce 136 (src line 655)
	WITHOUT  reduce 136 (src line 655)
	.  reduce 92 (src line 555)


state 57
	metric_identifier:  BOTTOMK.    (93)
	aggregate_op:  BOTTOMK.    (137)

	error  reduce 137 (src line 655)
	LEFT_PAREN  reduce 137 (src line 655)
	BY  reduce 137 (src line 655)
	WITHOUT  reduce 137 (src line 655)
	.  reduce 93 (src line 555)


state 58
	metric_identifier:  COUNT.    (95)
	aggregate_op:  COUNT.    (138)

	error  reduce 138 (src line 655)
	LEFT_PAREN  reduce 138 (src line 655)
	BY  reduce 138 (src line 655)
	WITHOUT  reduce 138 (src line 655)
	.  reduce 95 (src line 555)


state 59
	metric_identifier:  COUNT_VALUES.    (96)
	aggregate_op:  COUNT_VALUES.    (139)

	error  reduce 139 (src line 655)
	LEFT_PAREN  reduce 139 (src line 655)
	BY  reduce 139 (src line 655)
	WITHOUT  reduce 139 (src line 655)
	.  reduce 96 (src line 555)


state 60
	metric_identifier:  GROUP.    (97)
	aggregate_op:  GROUP.    (140)

	error  reduce 140 (src line 655)
	LEFT_PAREN  reduce 140 (src line 655)
	BY  reduce 140 (src line 655)
	WITHOUT  reduce 140 (src line 655)
	.  reduce 97 (src line 555)


state 61
	metric_identifier:  MAX.    (102)
	aggregate_op:  MAX.    (141)

	error  reduce 141 (src line 655)
	LEFT_PAREN  reduce 141 (src line 655)
	BY  reduce 141 (src line 655)
	WITHOUT  reduce 141 (src line 655)
	.  reduce 102 (src line 555)


state 62
	metric_identifier:  MIN.    (104)
	aggregate_op:  MIN.    (142)

	error  reduce 142 (src line 655)
	LEFT_PAREN  reduce 142 (src line 655)
	BY  reduce 142 (src line 655)
	WITHOUT  reduce 142 (src line 655)
	.  reduce 104 (src line 555)


state 63
	metric_identifier:  QUANTILE.    (106)
	aggregate_op:  QUANTILE.    (143)

	error  reduce 143 (src line 655)
	LEFT_PAREN  reduce 143 (src line 655)
	BY  reduce 143 (src line 655)
	WITHOUT  reduce 143 (src line 655)
	.  reduce 106 (src line 555)


state 64
	metric_identifier:  STDDEV.    (107)
	aggregate_op:  STDDEV.    (144)

	error  reduce 144 (src line 655)
	LEFT_PAREN  reduce 144 (src line 655)
	BY  reduce 144 (src line 655)
	WITHOUT  reduce 144 (src line 655)
	.  reduce 107 (src line 555)


state 65
	metric_identifier:  STDVAR.    (108)
	aggregate_op:  STDVAR.    (145)

	error  reduce 145 (src line 655)
	LEFT_PAREN  reduce 145 (src line 655)
	BY  reduce 145 (src line 655)
	WITHOUT  reduce 145 (src line 655)
	.  reduce 108 (src line 555)


state 66
	metric_identifier:  SUM.    (109)
	aggregate_op:  SUM.    (146)

	error  reduce 146 (src line 655)
	LEFT_PAREN  reduce 146 (src line 655)
	BY  reduce 146 (src line 655)
	WITHOUT  reduce 146 (src line 655)
	.  reduce 109 (src line 555)


state 67
	metric_identifier:  TOPK.    (110)
	aggregate_op:  TOPK.    (147)

	error  reduce 147 (src line 655)
	LEFT_PAREN  reduce 147 (src line 655)
	BY  reduce 147 (src line 655)
	WITHOUT  reduce 147 (src line 655)
	.  reduce 110 (src line 555)


state 68
	unary_op:  ADD.    (172)

	.  reduce 172 (src line 660)


state 69
	unary_op:  SUB.    (173)

	.  reduce 173 (src line 660)


state 70
	label_matchers:  LEFT_BRACE.label_match_list RIGHT_BRACE 
	label_matchers:  LEFT_BRACE.label_match_list COMMA RIGHT_BRACE 
	label_matchers:  LEFT_BRACE.RIGHT_BRACE 

	error  shift 112
	IDENTIFIER  shift 111
	RIGHT_BRACE  shift 109
	.  error

	label_match_list  goto 108
	label_matcher  goto 110

state 71
	start:  START_METRIC_SELECTOR vector_selector.    (5)

	.  reduce 5 (src line 172)


state 72
	metric:  metric_identifier label_set.    (90)

	.  reduce 90 (src line 548)


state 73
	label_set:  LEFT_BRACE label_set_list.RIGHT_BRACE 
	label_set:  LEFT_BRACE label_set_list.COMMA RIGHT_BRACE 
	label_set_list:  label_set_list.COMMA label_set_item 
	label_set_list:  label_set_list.error 

	error  shift 115
	COMMA  shift 114
	RIGHT_BRACE  shift 113
	.  error


state 74
	label_set:  LEFT_BRACE RIGHT_BRACE.    (114)

	.  reduce 114 (src line 561)


state 75
	label_set_list:  label_set_item.    (117)

	.  reduce 117 (src line 569)


state 76
	label_set_item:  IDENTIFIER.EQL STRING 
	label_set_item:  IDENTIFIER.EQL error 
	label_set_item:  IDENTIFIER.error 

	error  shift 117
	EQL  shift 116
	.  error


state 77
	label_set_item:  error.    (122)

	.  reduce 122 (src line 582)


state 78
	series_description:  metric series_values.    (123)
	series_values:  series_values.SPACE series_item 
	series_values:  series_values.SPACE 

	SPACE  shift 118
	.  reduce 123 (src line 590)


state 79
	series_values:  error.    (127)

	.  reduce 127 (src line 605)


state 80
	binary_expr:  expr ADD.bin_modifier expr 
	bool_modifier: .    (42)

	BOOL  shift 123
	.  reduce 42 (src line 253)

	bin_modifier  goto 119
	bool_modifier  goto 121
	group_modifiers  goto 120
	on_or_ignoring  goto 122

state 81
	binary_expr:  expr DIV.bin_modifier expr 
	bool_modifier: .    (42)

	BOOL  shift 123
	.  reduce 42 (src line 253)

	bin_modifier  goto 124
	bool_modifier  goto 121
	group_modifiers  goto 120
	on_or_ignoring  goto 122

state 82
	binary_expr:  expr EQLC.bin_modifier expr 
	bool_modifier: .    (42)

	BOOL  shift 123
	.  reduce 42 (src line 253)

	bin_modifier  goto 125
	bool_modifier  goto 121
	group_modifiers  goto 120
	on_or_ignoring  goto 122

state 83
	binary_expr:  expr GTE.bin_modifier expr 
	bool_modifier: .    (42)

	BOOL  shift 123
	.  reduce 42 (src line 253)

	bin_modifier  goto 126
	bool_modifier  goto 121
	group_modifiers  goto 120
	on_or_ignoring  goto 122

state 84
	binary_expr:  expr GTR.bin_modifier expr 
	bool_modifier: .    (42)

	BOOL  shift 123
	.  reduce 42 (src line 253)

	bin_modifier  goto 127
	bool_modifier  goto 121
	group_modifiers  goto 120
	on_or_ignoring  goto 122

state 85
	binary_expr:  expr LAND.bin_modifier expr 
	bool_modifier: .    (42)

	BOOL  shift 123
	.  reduce 42 (src line 253)

	bin_modifier  goto 128
	bool_modifier  goto 121
	group_modifiers  goto 120
	on_or_ignoring  goto 122

state 86
	binary_expr:  expr LOR.bin_modifier expr 
	bool_modifier: .    (42)

	BOOL  shift 123
	.  reduce 42 (src line 253)

	bin_modifier  goto 129
	bool_modifier  goto 121
	group_modifiers  goto 120
	on_or_ignoring  goto 122

state 87
	binary_expr:  expr LSS.bin_modifier expr 
	bool_modifier: .    (42)

	BOOL  shift 123
	.  reduce 42 (src line 253)

	bin_modifier  goto 130
	bool_modifier  goto 121
	group_modifiers  goto 120
	on_or_ignoring  goto 122

state 88
	binary_expr:  expr LTE.bin_modifier expr 
	bool_modifier: .    (42)

	BOOL  shift 123
	.  reduce 42 (src line 253)

	bin_modifier  goto 131
	bool_modifier  goto 121
	group_modifiers  goto 120
	on_or_ignoring  goto 122

state 89
	binary_expr:  expr LUNLESS.bin_modifier expr 
	bool_modifier: .    (42)

	BOOL  shift 123
	.  reduce 42 (src line 253)

	bin_modifier  goto 132
	bool_modifier  goto 121
	group_modifiers  goto 120
	on_or_ignoring  goto 122

state 90
	binary_expr:  expr MOD.bin_modifier expr 
	bool_modifier: .    (42)

	BOOL  shift 123
	.  reduce 42 (src line 253)

	bin_modifier  goto 133
	bool_modifier  goto 121
	group_modifiers  goto 120
	on_or_ignoring  goto 122

state 91
	binary_expr:  expr MUL.bin_modifier expr 
	bool_modifier: .    (42)

	BOOL  shift 123
	.  reduce 42 (src line 253)

	bin_modifier  goto 134
	bool_modifier  goto 121
	group_modifiers  goto 120
	on_or_ignoring  goto 122

state 92
	binary_expr:  expr NEQ.bin_modifier expr 
	bool_modifier: .    (42)

	BOOL  shift 123
	.  reduce 42 (src line 253)

	bin_modifier  goto 135
	bool_modifier  goto 121
	group_modifiers  goto 120
	on_or_ignoring  goto 122

state 93
	binary_expr:  expr POW.bin_modifier expr 
	bool_modifier: .    (42)

	BOOL  shift 123
	.  reduce 42 (src line 253)

	bin_modifier  goto 136
	bool_modifier  goto 121
	group_modifiers  goto 120
	on_or_ignoring  goto 122

state 94
	binary_expr:  expr SUB.bin_modifier expr 
	bool_modifier: .    (42)

	BOOL  shift 123
	.  reduce 42 (src line 253)

	bin_modifier  goto 137
	bool_modifier  goto 121
	group_modifiers  goto 120
	on_or_ignoring  goto 122

state 95
	offset_expr:  expr OFFSET.duration 
	offset_expr:  expr OFFSET.error 

	error  shift 139
	DURATION  shift 140
	.  error

	duration  goto 138

state 96
	step_invariant_expr:  expr AT.number 
	step_invariant_expr:  expr AT.error 

	error  shift 142
	NUMBER  shift 143
	.  error

	number  goto 141

state 97
	matrix_selector:  expr LEFT_BRACKET.duration RIGHT_BRACKET 
	subquery_expr:  expr LEFT_BRACKET.duration COLON maybe_duration RIGHT_BRACKET 
	subquery_expr:  expr LEFT_BRACKET.duration COLON duration error 
	subquery_expr:  expr LEFT_BRACKET.duration COLON error 
	subquery_expr:  expr LEFT_BRACKET.duration error 
	subquery_expr:  expr LEFT_BRACKET.error 

	error  shift 145
	DURATION  shift 140
	.  error

	duration  goto 144

state 98
	aggregate_expr:  aggregate_op aggregate_modifier.function_call_body 

	LEFT_PAREN  shift 103
	.  error

	function_call_body  goto 146

state 99
	aggregate_expr:  aggregate_op function_call_body.aggregate_modifier 
	aggregate_expr:  aggregate_op function_call_body.    (22)

	BY  shift 101
	WITHOUT  shift 102
	.  reduce 22 (src line 202)

	aggregate_modifier  goto 147

state 100
	aggregate_expr:  aggregate_op error.    (23)

	.  reduce 23 (src line 204)


state 101
	aggregate_modifier:  BY.grouping_labels 

	error  shift 150
	LEFT_PAREN  shift 149
	.  error

	grouping_labels  goto 148

state 102
	aggregate_modifier:  WITHOUT.grouping_labels 

	error  shift 150
	LEFT_PAREN  shift 149
	.  error

	grouping_labels  goto 151

state 103
	function_call_body:  LEFT_PAREN.function_call_args RIGHT_PAREN 
	function_call_body:  LEFT_PAREN.RIGHT_PAREN 

	IDENTIFIER  shift 49
	LEFT_BRACE  shift 70
	LEFT_PAREN  shift 51
	METRIC_IDENTIFIER  shift 22
	NUMBER  shift 50
	RIGHT_PAREN  shift 153
	STRING  shift 52
	ADD  shift 68
	LAND  shift 18
	LOR  shift 19
	LUNLESS  shift 20
	SUB  shift 69
	AVG  shift 56
	BOTTOMK  shift 57
	COUNT  shift 58
	COUNT_VALUES  shift 59
	GROUP  shift 60
	MAX  shift 61
	MIN  shift 62
	QUANTILE  shift 63
	STDDEV  shift 64
	STDVAR  shift 65
	SUM  shift 66
	TOPK  shift 67
	BY  shift 13
	OFFSET  shift 24
	WITHOUT  shift 30
	.  error

	aggregate_op  goto 48
	metric_identifier  goto 54
	unary_op  goto 53
	step_invariant_expr  goto 47
	aggregate_expr  goto 36
	binary_expr  goto 37
	expr  goto 154
	function_call  goto 38
	function_call_args  goto 152
	label_matchers  goto 55
	matrix_selector  goto 39
	number_literal  goto 40
	offset_expr  goto 41
	paren_expr  goto 42
	string_literal  goto 43
	subquery_expr  goto 44
	unary_expr  goto 45
	vector_selector  goto 46

state 104
	function_call:  IDENTIFIER function_call_body.    (59)

	.  reduce 59 (src line 331)


state 105
	binary_expr:  expr.ADD bin_modifier expr 
	binary_expr:  expr.DIV bin_modifier expr 
	binary_expr:  expr.EQLC bin_modifier expr 
	binary_expr:  expr.GTE bin_modifier expr 
	binary_expr:  expr.GTR bin_modifier expr 
	binary_expr:  expr.LAND bin_modifier expr 
	binary_expr:  expr.LOR bin_modifier expr 
	binary_expr:  expr.LSS bin_modifier expr 
	binary_expr:  expr.LTE bin_modifier expr 
	binary_expr:  expr.LUNLESS bin_modifier expr 
	binary_expr:  expr.MOD bin_modifier expr 
	binary_expr:  expr.MUL bin_modifier expr 
	binary_expr:  expr.NEQ bin_modifier expr 
	binary_expr:  expr.POW bin_modifier expr 
	binary_expr:  expr.SUB bin_modifier expr 
	paren_expr:  LEFT_PAREN expr.RIGHT_PAREN 
	offset_expr:  expr.OFFSET duration 
	offset_expr:  expr.OFFSET error 
	step_invariant_expr:  expr.AT number 
	step_invariant_expr:  expr.AT error 
	matrix_selector:  expr.LEFT_BRACKET duration RIGHT_BRACKET 
	subquery_expr:  expr.LEFT_BRACKET duration COLON maybe_duration RIGHT_BRACKET 
	subquery_expr:  expr.LEFT_BRACKET duration COLON duration error 
	subquery_expr:  expr.LEFT_BRACKET duration COLON error 
	subquery_expr:  expr.LEFT_BRACKET duration error 
	subquery_expr:  expr.LEFT_BRACKET error 

	LEFT_BRACKET  shift 97
	RIGHT_PAREN  shift 155
	ADD  shift 80
	DIV  shift 81
	EQLC  shift 82
	GTE  shift 83
	GTR  shift 84
	LAND  shift 85
	LOR  shift 86
	LSS  shift 87
	LTE  shift 88
	LUNLESS  shift 89
	MOD  shift 90
	MUL  shift 91
	NEQ  shift 92
	POW  shift 93
	SUB  shift 94
	AT  shift 96
	OFFSET  shift 95
	.  error


106: shift/reduce conflict (shift 96(0), red'n 76(5)) on AT
state 106
	binary_expr:  expr.ADD bin_modifier expr 
	binary_expr:  expr.DIV bin_modifier expr 
	binary_expr:  expr.EQLC bin_modifier expr 
	binary_expr:  expr.GTE bin_modifier expr 
	binary_expr:  expr.GTR bin_modifier expr 
	binary_expr:  expr.LAND bin_modifier expr 
	binary_expr:  expr.LOR bin_modifier expr 
	binary_expr:  expr.LSS bin_modifier expr 
	binary_expr:  expr.LTE bin_modifier expr 
	binary_expr:  expr.LUNLESS bin_modifier expr 
	binary_expr:  expr.MOD bin_modifier expr 
	binary_expr:  expr.MUL bin_modifier expr 
	binary_expr:  expr.NEQ bin_modifier expr 
	binary_expr:  expr.POW bin_modifier expr 
	binary_expr:  expr.SUB bin_modifier expr 
	offset_expr:  expr.OFFSET duration 
	offset_expr:  expr.OFFSET error 
	step_invariant_expr:  expr.AT number 
	step_invariant_expr:  expr.AT error 
	matrix_selector:  expr.LEFT_BRACKET duration RIGHT_BRACKET 
	subquery_expr:  expr.LEFT_BRACKET duration COLON maybe_duration RIGHT_BRACKET 
	subquery_expr:  expr.LEFT_BRACKET duration COLON duration error 
	subquery_expr:  expr.LEFT_BRACKET duration COLON error 
	subquery_expr:  expr.LEFT_BRACKET duration error 
	subquery_expr:  expr.LEFT_BRACKET error 
	unary_expr:  unary_op expr.    (76)

	LEFT_BRACKET  shift 97
	POW  shift 93
	AT  shift 96
	OFFSET  shift 95
	.  reduce 76 (src line 451)


state 107
	vector_selector:  metric_identifier label_matchers.    (77)

	.  reduce 77 (src line 471)


state 108
	label_matchers:  LEFT_BRACE label_match_list.RIGHT_BRACE 
	label_matchers:  LEFT_BRACE label_match_list.COMMA RIGHT_BRACE 
	label_match_list:  label_match_list.COMMA label_matcher 
	label_match_list:  label_match_list.error 

	error  shift 158
	COMMA  shift 157
	RIGHT_BRACE  shift 156
	.  error


state 109
	label_matchers:  LEFT_BRACE RIGHT_BRACE.    (82)

	.  reduce 82 (src line 511)


state 110
	label_match_list:  label_matcher.    (84)

	.  reduce 84 (src line 528)


state 111
	label_matcher:  IDENTIFIER.match_op STRING 
	label_matcher:  IDENTIFIER.match_op error 
	label_matcher:  IDENTIFIER.error 

	error  shift 160
	EQL  shift 161
	EQL_REGEX  shift 163
	NEQ  shift 162
	NEQ_REGEX  shift 164
	.  error

	match_op  goto 159

state 112
	label_matcher:  error.    (89)

	.  reduce 89 (src line 540)


state 113
	label_set:  LEFT_BRACE label_set_list RIGHT_BRACE.    (112)

	.  reduce 112 (src line 557)


state 114
	label_set:  LEFT_BRACE label_set_list COMMA.RIGHT_BRACE 
	label_set_list:  label_set_list COMMA.label_set_item 

	error  shift 77
	IDENTIFIER  shift 76
	RIGHT_BRACE  shift 165
	.  error

	label_set_item  goto 166

state 115
	label_set_list:  label_set_list error.    (118)

	.  reduce 118 (src line 571)


state 116
	label_set_item:  IDENTIFIER EQL.STRING 
	label_set_item:  IDENTIFIER EQL.error 

	error  shift 168
	STRING  shift 167
	.  error


state 117
	label_set_item:  IDENTIFIER error.    (121)

	.  reduce 121 (src line 580)


state 118
	series_values:  series_values SPACE.series_item 
	series_values:  series_values SPACE.    (126)

	BLANK  shift 170
	IDENTIFIER  shift 172
	NUMBER  shift 143
	ADD  shift 175
	SUB  shift 176
	.  reduce 126 (src line 603)

	series_item  goto 169
	number  goto 173
	series_value  goto 171
	signed_number  goto 174
